bugfix: modals don't shift when closing from group of more than 1; set position:absolute in Timeglider.css for tg-modal

--- a/js/timeglider/Timeglider.css
+++ b/js/timeglider/Timeglider.css
@@ -208,6 +208,7 @@
 	-ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#333333')";
 	/* For IE 5.5 - 7 */
 	filter: progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#333333');
+	position:absolute;
 }
 
 .close-button-remove, .close-button-filter, .close-button-toggleMenu {
@@ -593,7 +594,6 @@
 	height:20px;
 	width:1px;
 }
-
 
 .timeglider-ev-modal, .timeglider-timeline-modal {
   -webkit-border-radius:5px;
